# IO13

./: .gitignore  README.md
Project1/: CMakeLists.txt  buffered_input_stream.h  buffered_output_stream.h  f_stream.h  fread_input_stream.h  fwrite_output_stream.h  input_stream.h  main.cpp  merge_sort.h  merger.h  mmap_input_stream.h  mmap_output_stream.h  mmap_stream.h  output_stream.h  read_input_stream.h  rw_stream.h  stream.h  test.h  utils.h  write_output_stream.h
Project1/measurements/: best_external_sort  best_input.plot  best_output.plot  buffered_input  buffered_input.plot  buffered_input3  buffered_input_rd128  buffered_input_xxxsmall  buffered_output  buffered_output.plot  buffered_plot.gnuplot  collector.py  diskinfo.txt  external_sort_new  fread  fstreams.plot  fwrite  large_sort  large_sort2  mmap_read  mmap_write  read  sort_test_new  sort_test_new_last  sorting.plot  sorting2.plot
Project1/measurements/final/: best_external_sort  best_input.plot  best_output.plot  best_sort.plot  buffered_input  buffered_input.plot  buffered_input_high.plot  buffered_input_low.plot  buffered_input_rd.plot  buffered_input_rd128  buffered_input_xxxsmall  buffered_output  buffered_output.plot  buffered_output_high.plot  buffered_output_low.plot  external_sort  external_sort_new  fstreams.plot  heapsort  large_sort2  mmap_input.plot  mmap_output.plot  mmap_read  mmap_write  qsort  sorting2.plot  syscall_streams.plot  write
Project2/: CMakeLists.txt  block.hpp  buffered_stream.hpp  cached_stream.hpp  dummy_stream.hpp  external_heap.hpp  f_stream.hpp  main.cpp  mmap_file_stream.hpp  mmap_stream.hpp  sys_stream.hpp  test.cpp
Project2/measurements/: b.plot  best_sort.plot  buf_nonopt.txt  full_mem_output.txt  m_cache_size_comparison  m_cache_size_comparison.plot  m_d.plot  m_efficiency.plot  mem_nonopt.txt  todo.txt
Project2/measurements/round1/: buf_opt.txt  buf_superopt.txt  mem_opt.txt
Project2/measurements/round2/: b  m_small_blocks
Project2/measurements/round3/: m
Project2/measurements/round4/: b_efficient  b_final  b_inefficient  b_large_cache  best_sort  m_d  m_efficient  m_inefficient  m_large
Rapport1/: benchmarks.tex  conclusion.tex  facts.txt  introduction.tex  rapport.tex  ref.bib  test_setup.tex
Rapport2/: benchmarks.tex  conclusion.tex  facts.txt  implementation.tex  introduction.tex  rapport.tex  ref.bib  test_setup.tex
Rapport3/: 3.tex  rapport.tex
